--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "antd": "^4.16.6",
     "axios": "^0.21.1",
     "gsap": "^3.7.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.10.1",
