--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.10.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.2",
     "@types/react-input-mask": "^3.0.1"
   }
 }
