--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "gsap": "^3.7.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
+    "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.10.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-slick": "^0.28.1",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
