--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/react-slick": "^0.23.5",
+    "@types/react-transition-group": "^4.4.2",
     "@types/styled-components": "^5.1.11",
     "antd": "^4.16.6",
     "axios": "^0.21.1",
@@ -26,6 +27,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
