--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/styled-components": "^5.1.11",
     "antd": "^4.16.6",
     "axios": "^0.21.1",
+    "date-fns": "^2.22.1",
     "gsap": "^3.7.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
