--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.10.1",
     "react-icons": "^4.2.0",
+    "react-parallax": "^3.3.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
